--- a/AnyListen/App.xaml
+++ b/AnyListen/App.xaml
@@ -18,4 +18,12 @@
             </ResourceDictionary.MergedDictionaries>
 
             <Style x:Key="VisualizingListView" TargetType="{x:Type ListView}">
-             
+                <Setter Property="VirtualizingStackPanel.IsVirtualizing" Value="True" />
+                <Setter Property="VirtualizingStackPanel.VirtualizationMode" Value="Recycling" />
+                <Setter Property="VirtualizingStackPanel.IsVirtualizingWhenGrouping" Value="True" />
+            </Style>
+
+            <converter:FalseOnEmptyString x:Key="FalseOnEmptyString" />
+        </ResourceDictionary>
+    </Application.Resources>
+</Application>
