--- a/AnyListen/AppMainWindow/MahAppsExtensions/Dialogs/AdvancedInputDialog.xaml
+++ b/AnyListen/AppMainWindow/MahAppsExtensions/Dialogs/AdvancedInputDialog.xaml
@@ -1,1 +1,11 @@
-﻿<dialogs:BaseMetr
+﻿<dialogs:BaseMetroDialog xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                         xmlns:dialogs="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+                         xmlns:hurricaneDialogs="clr-namespace:AnyListen.AppMainWindow.MahAppsExtensions.Dialogs"
+                         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+                         x:Class=" AnyListen.AppMainWindow.MahAppsExtensions.Dialogs.AdvancedInputDialog"
+                         Loaded="Dialog_Loaded">
+    <Grid Margin="0 10 0 0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"
+                      
