--- a/AnyListen/Designer/DesignerWindow.xaml
+++ b/AnyListen/Designer/DesignerWindow.xaml
@@ -3,4 +3,17 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:viewModels="clr-namespace:AnyListen.Designer"
-        Title="{StaticResource Designer}" MinHeight="700" MinWidth="1200" Height="640" Width="1000" GlowBrush="{StaticResource AccentColorBrush}" DataContext="{x:Static viewModels:DesignerViewModel.Instance}" WindowStartupLocation=
+        Title="{StaticResource Designer}" MinHeight="700" MinWidth="1200" Height="640" Width="1000" GlowBrush="{StaticResource AccentColorBrush}" DataContext="{x:Static viewModels:DesignerViewModel.Instance}" WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+    </Window.Resources>
+    <Grid>
+        <Image Source="/Resources/App/bottom.png" VerticalAlignment="Bottom" RenderOptions.EdgeMode="Aliased" RenderOptions.BitmapScalingMode="HighQuality"/>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="8*"/>
+                <RowDefinition Height="5*"/>
+            </Grid.RowDefinitions>
+            <DockPanel>
+                <Button Width="30" Height="30" Visibility="{Binding CanGoBack,Converter={StaticResource BooleanToVisibilityConverter}}" Command="{Binding GoB
