--- a/AnyListen/Designer/DesignerWindow.xaml
+++ b/AnyListen/Designer/DesignerWindow.xaml
@@ -39,4 +39,13 @@
                                 </Setter.Value>
                             </Setter>
                         </Style>
-                    </Button.
+                    </Button.Style>
+                </Button>
+                <TextBlock Text="{Binding CurrentTitle}" FontSize="26" Margin="15" FontFamily="Segoe UI Light"/>
+            </DockPanel>
+
+            <controls:TransitioningContentControl Grid.Row="1" Content="{Binding PreviewControl}" Margin="10" RestartTransitionOnContentChange="True" Transition="Left" Background="Transparent"/>
+            <controls:TransitioningContentControl Grid.Row="2" Content="{Binding CurrentView}" Margin="15" RestartTransitionOnContentChange="True" Transition="Left" Background="Transparent"/>
+        </Grid>
+    </Grid>
+</controls:MetroWindow>
