--- a/AnyListen/Designer/Pages/HomePage.xaml
+++ b/AnyListen/Designer/Pages/HomePage.xaml
@@ -23,4 +23,14 @@
             <Style.Triggers>
                 <Trigger Property="IsMouseOver"
                      Value="true">
-                    <Setter Property="Foregr
+                    <Setter Property="Foreground"
+                        Value="{StaticResource LightColorBrush}" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
+    <StackPanel Orientation="Vertical">
+        <TextBlock Text="{StaticResource Create}" FontSize="20"/>
+        <Button Style="{StaticResource LinkButton}" Content="{StaticResource AccentColorString}" Command="{Binding CreateNewAccentColor}" FontSize="14" Margin="0,5,0,0"/>
+        <Button Style="{StaticResource LinkButton}" Content="{StaticResource AppTheme}" Command="{Binding CreateNewAppTheme}" FontSize="14" Margin="0,5,0,0"/>
+        <TextBlock Text="{StaticResource Open}" FontSize="20" Margin="0,40,0
