--- a/AnyListen/Designer/Pages/HomePage.xaml
+++ b/AnyListen/Designer/Pages/HomePage.xaml
@@ -33,4 +33,8 @@
         <TextBlock Text="{StaticResource Create}" FontSize="20"/>
         <Button Style="{StaticResource LinkButton}" Content="{StaticResource AccentColorString}" Command="{Binding CreateNewAccentColor}" FontSize="14" Margin="0,5,0,0"/>
         <Button Style="{StaticResource LinkButton}" Content="{StaticResource AppTheme}" Command="{Binding CreateNewAppTheme}" FontSize="14" Margin="0,5,0,0"/>
-        <TextBlock Text="{StaticResource Open}" FontSize="20" Margin="0,40,0
+        <TextBlock Text="{StaticResource Open}" FontSize="20" Margin="0,40,0,0"/>
+        <Button Style="{StaticResource LinkButton}" Content="{StaticResource AccentColorString}" FontSize="14" Margin="0,5,0,0" Command="{Binding OpenAccentColor}"/>
+        <Button Style="{StaticResource LinkButton}" Content="{StaticResource AppTheme}" FontSize="14" Margin="0,5,0,0" Command="{Binding OpenAppTheme}"/>
+    </StackPanel>
+</UserControl>
