skbuff: Fix skb checksum partial check.

--- a/AnyListen/Designer/Pages/ThemeEditControl.xaml
+++ b/AnyListen/Designer/Pages/ThemeEditControl.xaml
@@ -51,3 +51,8 @@
                     <DataTemplate DataType="{x:Type themes:ThemeBoolean}">
                         <controls:ToggleSwitchButton VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="{Binding BooleanValue}"/>
                     </DataTemplate>
+                </ContentControl.Resources>
+            </ContentControl>
+        </Grid>
+    </Grid>
+</UserControl>
