--- a/AnyListen/GUI/Controls/TrackImagePreseter.xaml
+++ b/AnyListen/GUI/Controls/TrackImagePreseter.xaml
@@ -3,4 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:controls="http://metro.mahapps.com/wi
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:behaviors="clr-namespace:AnyListen.GUI.Behaviors"
+             mc:Ignorable="d"
+             d:DesignHeight="180" d:DesignWidth="180" x:Name="UserControl">
+    <Border BorderThickness="0" Margin="10" Background="White">
+        <Border.Effect>
+            <DropShadowEffect BlurRadius="4" ShadowDepth="0" Direction="0" Opacity="0.4" Color="#FFD1D1D1" />
+        </Border.Effect>
+        <Border Margin="3" Background="{DynamicResource PicturePreviewBackgroundBrush}">
+            <Grid>
+                <Grid>
+                    <Path Data="{StaticResource VectorMusic}" Fill="{DynamicResource PicturePreviewForegroundBrush}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Stretch="
