--- a/AnyListen/GUI/Controls/TrackImagePreseter.xaml
+++ b/AnyListen/GUI/Controls/TrackImagePreseter.xaml
@@ -34,4 +34,14 @@
                     <controls:TransitioningContentControl.Resources>
                         <Style TargetType="Image">
                             <Setter Property="Stretch" Value="UniformToFill"/>
-                           
+                            <Setter Property="UseLayoutRounding" Value="True"/>
+                            <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
+                            <Setter Property="RenderOptions.EdgeMode" Value="Aliased"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding ElementName=UserControl,Path=TrackToRepresent.Image}" Value="{x:Null}">
+                                    <Setter Property="Visibility" Value="Hidden"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </controls:TransitioningContentControl.Resources>
+                </controls:Trans
