--- a/AnyListen/Notification/Views/NotificationTopWindow.xaml
+++ b/AnyListen/Notification/Views/NotificationTopWindow.xaml
@@ -61,3 +61,35 @@
                                     <Style TargetType="TextBlock">
                                         <Setter Property="FontSize" Value="14"/>
                                         <Setter Property="Foreground" Value="{StaticResource TextColor}"/>
+                                        <Setter Property="VerticalAlignment" Value="Center"/>
+                                    </Style>
+                                </StackPanel.Resources>
+                                <TextBlock Text="{Binding Duration}" FontWeight="Bold" FontSize="16" Foreground="{StaticResource TextColor}"/>
+                                <TextBlock Text=" - "/>
+                                <Viewbox Height="16" Width="16" VerticalAlignment="Center">
+                                    <Path Data="{Binding ProviderVector}" Fill="{StaticResource TextColor}"/>
+                                </Viewbox>
+                                <TextBlock Text=" :: "/>
+                                <TextBlock Text="{Binding kHz}"/>
+                                <TextBlock Text=" kHz"/>
+                                <StackPanel Orientation="Horizontal">
+                                    <StackPanel.Style>
+                                        <Style TargetType="StackPanel">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Uploader,Converter={StaticResource FalseOnEmptyString}}" Value="false">
+                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </StackPanel.Style>
+                                    <TextBlock Text=" :: "/>
+                                    <TextBlock Text="{Binding Uploader}"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ContentControl.Resources>
+                </ContentControl>
+            </StackPanel>
+        </StackPanel>
+    </Grid>
+</Window>
