msm: thermal: Update to speed up bootup time

--- a/AnyListen/Resources/Styles/AdvancedTimelineSlider.xaml
+++ b/AnyListen/Resources/Styles/AdvancedTimelineSlider.xaml
@@ -7,4 +7,23 @@
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="Repeat
+                <ControlTemplate TargetType="RepeatButton">
+                    <Border BorderThickness="1" BorderBrush="{DynamicResource GrayBrush10}" Background="{DynamicResource GrayBrush10}" Height="5"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="SliderThumb" TargetType="Thumb">
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="OverridesDefaultStyle" Value="True" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Thumb">
+                    <Rectangle Height="13" Width="6" Fill="{DynamicResource BlackBrush}"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="
