add missing dep

--- a/AnyListen/Resources/Styles/AdvancedTimelineSlider.xaml
+++ b/AnyListen/Resources/Styles/AdvancedTimelineSlider.xaml
@@ -40,4 +40,19 @@
         </Setter>
     </Style>
 
-    <ControlTemplate x:Key="Slider" TargetTyp
+    <ControlTemplate x:Key="Slider" TargetType="Slider">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" MinHeight="{TemplateBinding MinHeight}" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Track Grid.Row="1"  x:Name="PART_Track">
+                <Track.DecreaseRepeatButton>
+                    <RepeatButton Style="{StaticResource SliderRepteatButton1}" Command="Slider.DecreaseLarge"/>
+                </Track.DecreaseRepeatButton>
+                <Track.Thumb>
+                    <Thumb Style="{StaticResource SliderThumb}" x:Name="thumb"/>
+                </Track.Thumb>
+                <Track.IncreaseRepeatButton>
+         
