--- a/AnyListen/Resources/Styles/TrackListViewUtils.xaml
+++ b/AnyListen/Resources/Styles/TrackListViewUtils.xaml
@@ -30,4 +30,11 @@
                 </DataTrigger.EnterActions>
             </DataTrigger>
             <DataTrigger Binding="{Binding IsChecked}" Value="False">
-               
+                <Setter Property="Opacity" Value="0.4"/>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding TrackExists}" Value="False">
+                <Setter Property="Background" Value="{StaticResource GrayBrush8}"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+</ResourceDictionary>
