--- a/AnyListen/Resources/Styles/VolumeSlider.xaml
+++ b/AnyListen/Resources/Styles/VolumeSlider.xaml
@@ -18,4 +18,20 @@
         <Setter Property="OverridesDefaultStyle" Value="true" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="
+                <ControlTemplate TargetType="RepeatButton">
+                    <Border SnapsToDevicePixels="True" Background="{DynamicResource NormalColorBrush}" BorderBrush="{DynamicResource GrayBrush10}" BorderThickness="1" Height="5"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+    <Style x:Key="SliderThumb" TargetType="Thumb">
+        <Setter Property="SnapsToDevicePixels" Value="true" />
+        <Setter Property="OverridesDefaultStyle" Value="true" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Thumb">
+                    <Ellipse Height="10" Width="10" Fill="#FF65737C"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </S
