--- a/AnyListen/Resources/Styles/VolumeSlider.xaml
+++ b/AnyListen/Resources/Styles/VolumeSlider.xaml
@@ -34,4 +34,20 @@
                     <Ellipse Height="10" Width="10" Fill="#FF65737C"/>
                 </ControlTemplate>
             </Setter.Value>
-        </S
+        </Setter>
+    </Style>
+    <ControlTemplate x:Key="Slider" TargetType="Slider">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" MinHeight="{TemplateBinding MinHeight}" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Track Grid.Row="1" x:Name="PART_Track">
+                <Track.DecreaseRepeatButton>
+                    <RepeatButton Style="{StaticResource SliderRepeatButton1}" Command="Slider.DecreaseLarge" />
+                </Track.DecreaseRepeatButton>
+                <Track.Thumb>
+                    <Thumb Style="{StaticResource SliderThumb}"/>
+                </Track.Thumb>
+       
