--- a/AnyListen/Resources/Themes/BaseLight.xaml
+++ b/AnyListen/Resources/Themes/BaseLight.xaml
@@ -4,4 +4,9 @@
                     xmlns:options="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
-    </Resou
+    </ResourceDictionary.MergedDictionaries>
+
+    <SolidColorBrush x:Key="PicturePreviewBackgroundBrush" Color="#FFFBFBFB" options:Freeze="true"/>
+    <SolidColorBrush x:Key="PicturePreviewForegroundBrush" Color="#FFCECECE" options:Freeze="true"/>
+    <SolidColorBrush x:Key="SliderBackground" Color="LightGray" options:Freeze="true"/>
+</ResourceDictionary>
