--- a/AnyListen/Resources/Themes/Magenta.xaml
+++ b/AnyListen/Resources/Themes/Magenta.xaml
@@ -1,1 +1,14 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/present
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:options="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Magenta.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
+    <Color x:Key="LightColor">#CCFB54AD</Color>
+    <Color x:Key="BrightColor">#CCF32693</Color>
+    <Color x:Key="NormalColor">#CCD80073</Color>
+    <Color x:Key="DarkColor">#CCA0155F</Color>
+
+    <SolidColorBrush x:Key="LightColorBrush" Color="{StaticResource LightColor}" options:Freeze="true"/>
+    <SolidColorBrush x:Key="BrightColorBrush" Col
