--- a/AnyListen/Resources/Themes/Magenta.xaml
+++ b/AnyListen/Resources/Themes/Magenta.xaml
@@ -11,4 +11,7 @@
     <Color x:Key="DarkColor">#CCA0155F</Color>
 
     <SolidColorBrush x:Key="LightColorBrush" Color="{StaticResource LightColor}" options:Freeze="true"/>
-    <SolidColorBrush x:Key="BrightColorBrush" Col
+    <SolidColorBrush x:Key="BrightColorBrush" Color="{StaticResource BrightColor}" options:Freeze="true"/>
+    <SolidColorBrush x:Key="NormalColorBrush" Color="{StaticResource NormalColor}" options:Freeze="true"/>
+    <SolidColorBrush x:Key="DarkColorBrush" Color="{StaticResource DarkColor}" options:Freeze="true"/>
+</ResourceDictionary>
