genhd: check for int overflow in disk_expand_part_tbl()

--- a/AnyListen/Resources/Themes/Mauve.xaml
+++ b/AnyListen/Resources/Themes/Mauve.xaml
@@ -3,4 +3,15 @@
                     xmlns:options="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Mauve.xaml" />
-    </ResourceDictionary.Merg
+    </ResourceDictionary.MergedDictionaries>
+
+    <Color x:Key="LightColor">#CCB297CC</Color>
+    <Color x:Key="BrightColor">#CC9A80B2</Color>
+    <Color x:Key="NormalColor">#CC7D6A8F</Color>
+    <Color x:Key="DarkColor">#CC473B51</Color>
+
+    <SolidColorBrush x:Key="LightColorBrush" Color="{StaticResource LightColor}" options:Freeze="true"/>
+    <SolidColorBrush x:Key="BrightColorBrush" Color="{StaticResource BrightColor}" options:Freeze="true"/>
+    <SolidColorBrush x:Key="NormalColorBrush" Color="{StaticResource NormalColor}" options:Freeze="true"/>
+    <SolidColorBrush x:Key="DarkColorBrush" Color="{StaticResource DarkColor}" options:Freeze="true"/>
+</ResourceDictionary>
