--- a/AnyListen/Resources/Themes/Olive.xaml
+++ b/AnyListen/Resources/Themes/Olive.xaml
@@ -1,1 +1,13 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/win
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:options="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Olive.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
+    <Color x:Key="LightColor">#CC84A37A</Color>
+    <Color x:Key="BrightColor">#CC77966C</Color>
+    <Color x:Key="NormalColor">#CC6D8A64</Color>
+    <Color x:Key="DarkColor">#CC54664D</Color>
+
+    <SolidColorBrush x:Key="LightColorBrush" Color="{StaticResource LightColor}" options:Freeze="true"
