mm/zpool: implement common zpool api to zbud/zsmalloc

--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -29,4 +29,8 @@
 
     <GeometryGroup x:Key="VectorRandom"
                    options:Freeze="True"
-  
+                   x:Shared="False">
+        <!--  https://www.iconfinder.com/icons/208025/audio_random_shuffle_icon  -->
+        <Geometry>F1 M 21.370,5.447 L 21.370,8.668 L 25.704,4.334 L 21.370,0.000 L 21.370,3.223 L 16.795,3.223 L 16.795,3.238 L 16.784,3.225 L 4.847,15.161 L 0.001,15.161 L 0.001,17.385 L 5.759,17.385 L 5.759,17.376 L 5.767,17.385 L 17.706,5.447 L 21.370,5.447 Z</Geometry>
+        <Geometry>F1 M 9.769,9.368 L 11.341,7.796 L 5.767,2.223 L 5.758,2.231 L 5.758,2.223 L 0.000,2.223 L 0.000,4.447 L 4.846,4.447 L 9.769,9.368 Z</Geometry>
+        <Geometry>F1 M 21.370,14.161 L 17.706,14.161 L 13.921,10.376 L 12.349,11.949 L 16.784,16.383 L 16.796,16.370 L 16.796,16.385 L 21.370,16.385 L 21.370,19.608 L 25.704,15.274 L 21.370,10.940 L 21.370,14.16
