--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -33,4 +33,14 @@
         <!--  https://www.iconfinder.com/icons/208025/audio_random_shuffle_icon  -->
         <Geometry>F1 M 21.370,5.447 L 21.370,8.668 L 25.704,4.334 L 21.370,0.000 L 21.370,3.223 L 16.795,3.223 L 16.795,3.238 L 16.784,3.225 L 4.847,15.161 L 0.001,15.161 L 0.001,17.385 L 5.759,17.385 L 5.759,17.376 L 5.767,17.385 L 17.706,5.447 L 21.370,5.447 Z</Geometry>
         <Geometry>F1 M 9.769,9.368 L 11.341,7.796 L 5.767,2.223 L 5.758,2.231 L 5.758,2.223 L 0.000,2.223 L 0.000,4.447 L 4.846,4.447 L 9.769,9.368 Z</Geometry>
-        <Geometry>F1 M 21.370,14.161 L 17.706,14.161 L 13.921,10.376 L 12.349,11.949 L 16.784,16.383 L 16.796,16.370 L 16.796,16.385 L 21.370,16.385 L 21.370,19.608 L 25.704,15.274 L 21.370,10.940 L 21.370,14.16
+        <Geometry>F1 M 21.370,14.161 L 17.706,14.161 L 13.921,10.376 L 12.349,11.949 L 16.784,16.383 L 16.796,16.370 L 16.796,16.385 L 21.370,16.385 L 21.370,19.608 L 25.704,15.274 L 21.370,10.940 L 21.370,14.161 Z</Geometry>
+    </GeometryGroup>
+
+    <Geometry x:Key="VectorShuffle"
+              options:Freeze="True"
+              x:Shared="False">
+        <!--  https://www.iconfinder.com/icons/183174/shuffle_icon  -->
+        F1 M 9.042,2.000 L 12.000,2.000 L 12.000,0.000 L 16.000,3.000 L 12.000,6.000 L 12.000,4.000 L 10.042,4.000 L 4.001,12.000 L 0.000,12.000 L 0.000,10.000 L 3.001,10.000 L 9.042,2.000 Z M 4.384,5.845 L 3.000,4.000 L 0.000,4.000 L 0.000,2.000 L 4.000,2.000 L 5.638,4.184 L 4.384,5.845 Z M 9.000,12.000 L 7.384,9.845 L 8.638,8.184 L 10.000,10.000 L 12.000,10.000 L 12.000,8.000 L 16.000,11.000 L 12.000,14.000 L 12.000,12.000 L 9.000,12.000 Z
+    </Geometry>
+
+    <Geometr
