--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -43,4 +43,14 @@
         F1 M 9.042,2.000 L 12.000,2.000 L 12.000,0.000 L 16.000,3.000 L 12.000,6.000 L 12.000,4.000 L 10.042,4.000 L 4.001,12.000 L 0.000,12.000 L 0.000,10.000 L 3.001,10.000 L 9.042,2.000 Z M 4.384,5.845 L 3.000,4.000 L 0.000,4.000 L 0.000,2.000 L 4.000,2.000 L 5.638,4.184 L 4.384,5.845 Z M 9.000,12.000 L 7.384,9.845 L 8.638,8.184 L 10.000,10.000 L 12.000,10.000 L 12.000,8.000 L 16.000,11.000 L 12.000,14.000 L 12.000,12.000 L 9.000,12.000 Z
     </Geometry>
 
-    <Geometr
+    <Geometry x:Key="VectorRepeat"
+              options:Freeze="True"
+              x:Shared="False">
+        <!--  https://www.iconfinder.com/icons/208022/audio_repeat_undo_icon  -->
+        F1 M 25.797,17.087 C 26.181,15.857 26.404,14.556 26.404,13.202 C 26.404,5.923 20.481,0.000 13.202,0.000 C 5.923,0.000 0.000,5.922 0.000,13.202 C 0.000,20.482 5.923,26.406 13.202,26.406 L 13.202,22.168 C 8.259,22.168 4.237,18.147 4.237,13.203 C 4.237,8.260 8.258,4.239 13.202,4.239 C 18.144,4.239 22.167,8.260 22.167,13.203 C 22.167,13.881 22.079,14.536 21.935,15.170 L 17.972,13.202 L 20.732,21.402 L 28.930,18.640 L 25.797,17.087 Z
+    </Geometry>
+
+    <Geometry x:Key="VectorPlus"
+              options:Freeze="True"
+              x:Shared="False">
+      
