--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -53,4 +53,11 @@
     <Geometry x:Key="VectorPlus"
               options:Freeze="True"
               x:Shared="False">
-      
+        <!--  https://www.iconfinder.com/icons/103172/add_plus_icon  -->
+        F1 M 22.500,14.000 L 14.000,14.000 L 14.000,22.500 C 14.000,22.776 13.776,23.000 13.500,23.000 L 9.500,23.000 C 9.224,23.000 9.000,22.776 9.000,22.500 L 9.000,14.000 L 0.500,14.000 C 0.224,14.000 0.000,13.776 0.000,13.500 L 0.000,9.500 C 0.000,9.224 0.224,9.000 0.500,9.000 L 9.000,9.000 L 9.000,0.500 C 9.000,0.224 9.224,0.000 9.500,0.000 L 13.500,0.000 C 13.776,0.000 14.000,0.224 14.000,0.500 L 14.000,9.000 L 22.500,9.000 C 22.776,9.000 23.000,9.224 23.000,9.500 L 23.000,13.500 C 23.000,13.776 22.776,14.000 22.500,14.000 Z
+    </Geometry>
+
+    <Geometry x:Key="VectorAdd"
+              options:Freeze="True"
+              x:Shared="False">
+        <!--  https://www.icon
