--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -68,4 +68,11 @@
               options:Freeze="True"
               x:Shared="False">
         <!--  https://www.iconfinder.com/icons/183317/delete_minus_remove_icon  -->
-        F1 M 4.000,7.000 L 4.000,9.000 L 12.000,9.000 L 12.000,7.000 L 4.000,7.000 Z M 8.00
+        F1 M 4.000,7.000 L 4.000,9.000 L 12.000,9.000 L 12.000,7.000 L 4.000,7.000 Z M 8.000,16.000 C 3.582,16.000 0.000,12.418 0.000,8.000 C 0.000,3.582 3.582,0.000 8.000,0.000 C 12.418,0.000 16.000,3.582 16.000,8.000 C 16.000,12.418 12.418,16.000 8.000,16.000 Z
+    </Geometry>
+
+    <Geometry x:Key="VectorPlay"
+              options:Freeze="True"
+              x:Shared="False">
+        <!--  https://www.iconfinder.com/icons/211876/play_icon  -->
+        F1 M 309.200,168.900 L 30.800,3.200 C 27.400,1.200 23.900,0.000 19.900,0.000 C 9.000,0.000 0.100,9.000 0.100,20.000 L 0.000,20.000 L 0.000,364.000 L 0.100,364.000 C 0.100,375.000 9.000,384.000 19.900,384.000 C 24.000,384.000 27.400,382.600 31.100,380.600 L 309.200,215.100 C 315.800,209.600 320.000,201.300 320.000,192.000
