--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -113,4 +113,11 @@
                    x:Shared="False">
         <!--  https://www.iconfinder.com/icons/211608/folder_icon  -->
         <Geometry>F1 M 366.073,96.030 L 17.873,96.030 C 0.173,96.030 -0.727,105.230 0.273,116.530 L 13.273,299.530 C 14.173,310.730 16.773,320.030 34.373,320.030 L 350.573,320.030 C 368.573,320.030 370.673,310.830 371.673,299.530 L 383.773,114.230 C 384.673,103.030 383.773,96.030 366.073,96.030 Z</Geometry>
-        <Geometry>F1 M 362.173,47
+        <Geometry>F1 M 362.173,47.330 C 361.673,34.930 357.673,32.030 347.073,32.030 C 347.073,32.030 225.673,32.030 203.873,32.030 C 182.073,32.030 179.473,32.330 162.973,14.630 C 149.273,-0.170 154.673,0.030 126.373,0.030 C 103.773,0.030 51.073,0.030 51.073,0.030 C 33.673,0.030 27.473,-1.470 25.873,16.630 C 24.373,33.330 20.873,73.830 20.373,80.030 L 363.773,80.030 L 362.173,47.330 Z</Geometry>
+    </GeometryGroup>
+
+    <Geometry x:Key="VectorAddFile"
+              options:Freeze="True"
+              x:Shared="False">
+        <!--  https://www.iconfinder.com/icons/183584/add_document_icon  -->
+        F1 M 5.000,5.000 L 5.000,7.000 L 3.000,7.000 L 3.000,9.000 L 5.000,9.000 L 5.000,11.000 L 7.000,11.000 L 7.000,9.000 L 9.000,9.000 L 9.000,7
