Some code cleanups

--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -120,4 +120,11 @@
               options:Freeze="True"
               x:Shared="False">
         <!--  https://www.iconfinder.com/icons/183584/add_document_icon  -->
-        F1 M 5.000,5.000 L 5.000,7.000 L 3.000,7.000 L 3.000,9.000 L 5.000,9.000 L 5.000,11.000 L 7.000,11.000 L 7.000,9.000 L 9.000,9.000 L 9.000,7
+        F1 M 5.000,5.000 L 5.000,7.000 L 3.000,7.000 L 3.000,9.000 L 5.000,9.000 L 5.000,11.000 L 7.000,11.000 L 7.000,9.000 L 9.000,9.000 L 9.000,7.000 L 7.000,7.000 L 7.000,5.000 L 5.000,5.000 L 5.000,5.000 Z M 9.016,0.012 L 12.059,4.028 L 9.016,4.028 L 9.016,0.012 L 9.016,0.012 Z M 0.000,0.000 L 8.000,0.000 L 8.000,5.000 L 12.000,5.000 L 12.000,15.000 L 8.000,15.000 L 0.000,15.000 L 0.000,0.000 L 0.000,0.000 Z
+    </Geometry>
+
+    <Geometry x:Key="VectorAddFolder"
+              options:Freeze="True"
+              x:Shared="False">
+        <!--  https://www.iconfinder.com/icons/183572/folderadd_icon  -->
+        F1 M 3.000,0.000 L 7.000,0.000 L 8.000,1.000 L 2.000,1.000 L 3.000,0.000 Z M 7.000,4.000 L 7.000,6.000 L 5.000,6.000 L 5.000,8.000 L 7.000,8.000 L 7.000,10.000 L 9.000,10.000 L 9.000,8.000 L 11.000,8.000 L 11.000,6.000 L 9.000,6.000 L 9.000,4.
