--- a/AnyListen/Resources/VectorGraphics.xaml
+++ b/AnyListen/Resources/VectorGraphics.xaml
@@ -127,4 +127,15 @@
               options:Freeze="True"
               x:Shared="False">
         <!--  https://www.iconfinder.com/icons/183572/folderadd_icon  -->
-        F1 M 3.000,0.000 L 7.000,0.000 L 8.000,1.000 L 2.000,1.000 L 3.000,0.000 Z M 7.000,4.000 L 7.000,6.000 L 5.000,6.000 L 5.000,8.000 L 7.000,8.000 L 7.000,10.000 L 9.000,10.000 L 9.000,8.000 L 11.000,8.000 L 11.000,6.000 L 9.000,6.000 L 9.000,4.
+        F1 M 3.000,0.000 L 7.000,0.000 L 8.000,1.000 L 2.000,1.000 L 3.000,0.000 Z M 7.000,4.000 L 7.000,6.000 L 5.000,6.000 L 5.000,8.000 L 7.000,8.000 L 7.000,10.000 L 9.000,10.000 L 9.000,8.000 L 11.000,8.000 L 11.000,6.000 L 9.000,6.000 L 9.000,4.000 L 7.000,4.000 Z M 0.000,3.000 C 0.000,2.500 0.500,2.000 1.000,2.000 L 15.000,2.000 C 15.500,2.000 16.000,2.500 16.000,3.000 L 16.000,11.000 C 16.000,11.500 15.500,12.000 15.000,12.000 L 1.000,12.000 C 0.500,12.000 0.000,11.500 0.000,11.000 L 0.000,3.000 Z
+    </Geometry>
+
+    <Geometry x:Key="VectorVolumeLoud"
+              options:Freeze="True"
+              x:Shared="False">
+        <!--  https://www.iconfinder.com/icons/208032/loud_speaker_volume_icon  -->
+        F1 M 1.859,0.000 C 1.240,0.099 0.619,0.196 0.000,0.295 C 0.816,5.451 0.816,10.704 0.000,15.860 C 0.619,15.958 1.240,16.056 1.859,16.154 C 2.707,10.804 2.707,5.351 1.859,0.000 Z
+    </Geometry>
+
+    <Geometry x:Key="VectorVolumeMedium"
+              options:Fr
